--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Uber</string>
-    <string name="title_activity_maps">MapsActivity</string>
+    <string name="title_activity">Uber</string>
 </resources>
