--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Uber</string>
     <string name="title_activity">Uber</string>
+    <string name="titulo_login">Acessar minha conta</string>
+    <string name="titulo_cadastro">Cadastrar uma conta</string>
 </resources>
